* Cleanup: Converted logging from ever-so-slow syslog to the new logging module.
  All parameters such as filename, level, date format, and log format are now configurable.
* Ability to set and show a global delay for sleep()ing between remote commands.
  Basically this allows one to "slow things down" if desired.

Change List For v0.8.0 (Language: Python / Status: Planning)
---------------------------------------------------------------
- Ability to use a new run command keyword: "parallel".
  This will run the given command in background processes in parallel.
  Output will be spooled to one file per server in a standard output directory.
- Ability to use a "set concurrency X" command to set the concurrency
  for parallel run.  Also XML config directives for global defaults.
- Cleanup: Provide a larger set of example files.  Double-check doc.  Test like crazy.

Idea List For v0.8.1 (Language: Python / Status: Not Started)
---------------------------------------------------------------
- Testing: Completion of a comprehensive batch file test suite.
  (Yes, this has been delayed often.  So far sheer simplicity has been enough.)
- Ability to give a small summary report of which servers appeared to be down
  during a given run.

Idea List For v0.8.5 (Language: Python / Status: Not Started)
---------------------------------------------------------------
- Ability to use regular expressions to match server names.
- Single remote server file to single remote server file copy.
  (i.e. scp awd@www01:/tmp/blah awd@www02:/some/other/path/)
- Single remote server file to multiple remote servers file copy.
  (i.e. scp awd@www01:/tmp/blah awd@www01,www02,www03:/some/other/path/)
- Multiple remote server file to local file copy.  This would have to somehow
  rename the files as it copies them down, perhaps based on hostname prefix.
  (i.e. scp awd@www01,www02,www03:/tmp/blah .)

Idea List For v1.0 (Will we ever get here?  Who knows!)